# SalesPredictionProject

./: .gitignore  README.md  eda.ipynb  main.py  setup.cfg
src/sales_prediction/classes/arima/: arimaMain.py
src/sales_prediction/constants/: arimaConstants.py  offsetconstants.py
src/sales_prediction/script_internal/: main.py  transformation.py
