[metadata]
name = SalesPredictionProject
version = 0.0.1
author = Pericles Beirao
author_email = pericles.beirao@gmail.com
description = Sales Prediction Project for UvA  Data Science Master
long_description = file: README.md
long_description_content_type = text/markdown

classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    requests
    importlib-metadata; python_version<"3.8"
    datetime
    numpy
    pandas
    matplotlib
    statsmodels
    pmdarima
    scikit-learn
    seaborn

[options.entry_points]
console_scripts =
    train_models = SalesPredictionProject.main:main

[options.package_data]
* = *.txt, *.rst
hello = *.msg


[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    data*
